--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -7,13 +7,15 @@
   <label for="">Password</label>
   <input type="password" name="password" />
 
-  <button type="submit">Log in</button>
+  <button type="submit">Log in</button> 
 </form>
 <hr>
 <p>If you are not registered please click here</p>
-<a href="/api/signup"><button>Go to sign up</button></a>
+<a href="/api/signup"><button>go to sign up</button></a>
 
-<p>Forgot your pass?</p>
+<p>Forgot your pass?</p>  
 <a href="/api/forgotPass"><button>click here to generate a new one</button></a>
-
+<br>
+<p>Have a Github account?</p>
+<a href="/api/auth/github"><button>click here to login using Github</button></a>
 <script src="/js/login.js"></script>  
